<resources>

    <string name="tv_customer_inquiries">客户问询</string>
    <string name="tv_in_process">处理中</string>
    <string name="tv_real_estate">房产</string>
    <string name="tv_asking_people">问询人</string>
    <string name="tv_work_num">工单编号</string>
    <string name="tv_create_time">创建时间</string>
    <string name="tv_turn_order">转单</string>
    <string name="tv_talk">沟通</string>
    <string name="tv_feed_back">反馈</string>
    <string name="tv_dealing">处理中</string>
    <string name="tv_closed">已关闭</string>
    <string name="tv_for_respone">待评价</string>
    <string name="tv_history">历史流程</string>
    <string name="tv_phone">联系电话</string>
    <string name="tv_divide">园区</string>
    <string name="tv_work_order_info">工单信息</string>
    <string name="tv_work_nums">工单编号</string>
    <string name="tv_complaint_time">问询时间</string>
    <string name="tv_record_person">记录人</string>
    <string name="tv_ask_way">问询方式</string>
    <string name="tv_ask_type">问询类型</string>
    <string name="tv_finish_time">实际完成时间</string>
    <string name="tv_current_deal_person">当前处理人</string>
    <string name="tv_inquiries_content">问询内容</string>
    <string name="tv_inquiries_info">问询信息</string>
    <string name="tv_reset">重置</string>
    <string name="tv_pic">图片</string>
    <string name="tv_feed_history">回复历史</string>
    <string name="tv_feed_content">回复内容</string>
    <string name="tv_forse_close">强制关闭</string>
    <string name="tv_save">保存</string>
    <string name="tv_feedback">反馈</string>
    <string name="tv_sender">沟通发送人</string>
    <string name="tv_send_time">发送时间</string>
    <string name="tv_feedback_time">期望答复时间</string>
    <string name="tv_communicate_content">沟通内容</string>
    <string name="tv_feedback_content">反馈内容</string>
    <string name="tv_empty_content">反馈内容不能为空</string>
    <string name="tv_empty_feedback_content">回复内容不能为空</string>
    <string name="tv_empty_save_content">保存内容不能为空</string>
    <string name="tv_save_suc">保存数据成功</string>
    <string name="tv_svae_fail">保存失败</string>
    <string name="tv_evaluation_time">评价时间</string>
    <string name="tv_feedback_suc">回复成功</string>
    <string name="tv_feedback_fail">回复失败</string>
    <string name="tv_empty_evaluation">评价内容不能为空</string>
    <string name="tv_evaluation_suc">评价成功</string>
    <string name="tv_evaluation_fail">评价失败</string>
    <string name="tv_finish">已完成</string>
    <string name="tv_apply_close_info">申请闭单信息</string>
</resources>
