<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="InquiriesItemModule"
            type="com.einyun.app.pms.customerinquiries.module.InquiriesItemModule" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_20"
        android:layout_marginLeft="@dimen/px_20"
        android:layout_marginRight="@dimen/px_20"
        android:layout_marginBottom="@dimen/px_5"
        android:focusable="true"
        android:clickable="true"
        android:foreground = "?attr/selectableItemBackground">
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">
        <TextView
            android:id="@+id/tv_inquiries_type"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/blackTextColor"
            android:layout_width="@dimen/px_360"
            android:singleLine="true"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_approval_state"
            android:gravity="center"
            android:text="@string/tv_in_process"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@mipmap/icon_new"
            android:layout_width="68dp"
            android:textSize="13sp"
            android:layout_height="24dp"/>
        </RelativeLayout>
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView

                android:text="@string/tv_real_estate"
                style="@style/style_text_approval_left" />
            <TextView
                android:id="@+id/tv_property_num"
                style="@style/style_text_approval_right" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                android:text="@string/tv_asking_people"
                style="@style/style_text_approval_left"
                />
            <TextView
                android:id="@+id/tv_asking_people"
                style="@style/style_text_approval_right"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/px_10"
            android:layout_marginBottom="@dimen/px_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_work_num"
                style="@style/style_text_approval_left"
                />
            <TextView
                android:id="@+id/tv_work_order_num"
                style="@style/style_text_approval_right" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                style="@style/style_text_approval_left"
                android:text="@string/tv_create_time"/>
            <TextView
                android:id="@+id/tv_create_time"
                style="@style/style_text_approval_right"/>
        </RelativeLayout>
        <View
            android:background="@color/thin_divider_color"
            android:layout_marginLeft="@dimen/px_20"
            android:layout_marginRight="@dimen/px_20"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_talk_or_turn_single"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_81">
            <TextView
                android:text="@string/tv_talk"
                android:id="@+id/tv_talk"
                style="@style/style_tv_turn_order" />

            <View
                android:background="@color/thin_divider_color"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/tv_turn_order"
                android:id="@+id/tv_turn_order"
                style="@style/style_tv_turn_order" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rl_feed_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_82">
            <TextView
                android:textColor="@color/blueTextColor"
                android:textSize="@dimen/font_size15"
                android:text="@string/tv_feed_back"
                style="@style/style_text_approval_left" />
            <TextView
                android:layout_marginRight="@dimen/px_28"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/px_25"
                android:layout_height="@dimen/px_25"
                android:background="@drawable/right_arrow"
                />
        </RelativeLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>

